# technopark_cpp

./: .gitignore  CMakeLists.txt
lecture_2/: 001_encapsulation.cpp  002_namespaces.cpp  004_default_contructor.cpp  005_required_default_constructor_for_array.cpp  007_private_constructor.cpp  008_default_copy_constructor_and_assign_operator.cpp  011_destructors.cpp  014_move_constructor.cpp  016_1_rvalue_methods.cpp  018_trivial_constructors.cpp  020_RVO_NRVO.cpp  025_contr_order.cpp  032_command.cpp  043_overload_operators.cpp  CMakeLists.txt
lecture_3/: 004_default_contructor.cpp  005_polymorph.cpp  011_destructors.cpp  015_move_assignment.cpp  016_assignment_via_constructor.cpp  025_contr_order.cpp  026_diamond_inheritance.cpp  028_elimination.cpp  036_vector_2.cpp  100_overload_and_override.cpp  CMakeLists.txt
lecture_4/: 025_contr_order.cpp  026_1_pure_virt_func_call.cpp  027_RTTI.cpp
